# Aarhus-University-Quadruped-Robot

./: CAN_BUS.c  CAN_BUS.h  CAN_Network.c  CAN_Network_Class.cpp  CAN_Network_TEST.cpp  CAN_Network_preROS.cpp  Dockerfile  EncoderCounter.cpp  LICENSE  README.md  RMD_X8.c  RMD_X8.h  entrypoint.sh  setup_terminal.sh
src/CAN_library/: CMakeLists.txt  package.xml
src/bno055/bno055/params/: NodeParameters.py  bno055_params.yaml  bno055_params_test.yaml
src/can_network_library/: CMakeLists.txt
src/can_network_library/include/can_network_library/: CAN_BUS.h  EncoderCounter.h  Leg_CAN_Network.h
src/can_network_library/src/: CAN_BUS.c  EncoderCounter.cpp  Leg_CAN_Network.cpp  RMD_X8.c
src/comm_interface/: CMakeLists.txt  package.xml
src/comm_interface/include/comm_interface/: CAN_BUS.h  Leg_CAN_Network.h  RMD_X8.h
src/comm_interface/src/: CAN_BUS.cpp  EncoderCounter.cpp  Leg_CAN_Network.cpp  Leg_Communication.cpp  RMD_X8.cpp
src/control_interface_package/: CMakeLists.txt  control_interface_launch.cpp.save  package.xml
src/control_interface_package/src/: control_interface.cpp  control_interface_2.cpp  led_interface.cpp  led_interface_2.cpp  led_publisher.cpp
src/custom_interfaces/: CMakeLists.txt  package.xml
src/custom_interfaces/msg/: Buttons.msg  Leds.msg  LegCommands.msg  LegReadings.msg  LegStates.msg  MotorReadings.msg  StateEstimation.msg
src/estimation_pkg/: package.xml  setup.py
src/estimation_pkg/estimation_pkg/: ROS_estimation.py  StateEstimator_2.py  StateEstimator_Py.py  estimation_data.csv  forward_kinematics.py  imu_corrections.py  imu_corrections_alpha.py  state_estimation.py
src/estimation_pkg/launch/: estimation.launch.py  imu_corrections.launch.py
src/gait_pkg/: package.xml  setup.cfg  setup.py
src/gait_pkg/gait_pkg/: Crawl_Gait_Lib.py  Crawl_Gait_ROS2.py  Robot_Kinematics.py  Trajectory.py  bezier_3d.py
src/gait_pkg/launch/: gait_pkg.launch.py
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/install/can_network_library/include/can_network_library/: CAN_BUS.h  Leg_CAN_Network.h
src/install/can_network_library/share/ament_index/resource_index/parent_prefix_path/: can_network_library
src/install/can_network_library/share/can_network_library/: package.bash  package.dsv  package.sh  package.xml  package.zsh
src/install/can_network_library/share/can_network_library/cmake/: Leg_CAN_NetworkExport-noconfig.cmake  Leg_CAN_NetworkExport.cmake  can_network_libraryConfig.cmake
src/install/comm_interface/share/comm_interface/: package.bash  package.dsv  package.sh  package.zsh
src/install/comm_interface/share/comm_interface/environment/: ament_prefix_path.sh
src/install/custom_interfaces/share/custom_interfaces/: local_setup.dsv  package.dsv  package.sh
src/install/custom_interfaces/share/custom_interfaces/environment/: path.sh
src/install/motor_communication/share/motor_communication/: package.bash  package.zsh
src/log/: latest_build
src/lowlevel/: CMakeLists.txt  package.xml
src/lowlevel/include/common/: unitreeLeg.h
src/lowlevel/include/control/: CtrlComponents.h
src/lowlevel/include/lowlevel/: lowlevel_state.hpp
src/lowlevel/src/: lowlevel_node.cpp  lowlevel_node2.cpp  sensor_fusion_node.cpp
src/lowlevel/src/common/: unitreeRobot.cpp
src/lowlevel/src/control/: Estimator.cpp
src/motor_communication/: CMakeLists.txt  package.xml
src/motor_communication/include/motor_communication/: CAN_BUS.h  EncoderCounter.h  Leg_CAN_Network.h
src/motor_communication/src/: Leg_CAN_Network.cpp  Leg_Communication.cpp
src/my_control_interface_package/: CMakeLists.txt  package.xml
src/primitive/: package.xml  setup.cfg  setup.py
src/ros-imu-bno055/launch/: imu.launch
src/ros-imu-bno055/src/: bno055_i2c_node_ros2.cpp
src/test/: CMakeLists.txt  package.xml
src/testing_interface/: package.xml  setup.cfg  setup.py
src/testing_interface/launch/: testing_interface.launch.py
src/testing_interface/testing_interface/: control_interface.py
